$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-10-07 [O] Replaced hard coded JPEG quality with config value in picture editor {eenemeenemuu}
2009-10-07 [B] Fixed several issues with picture editor (thread ID 61789) {eenemeenemuu}
2009-10-07 [B] Set correct owner id for personal albums during upgrade process (thread ID 61715) {eenemeenemuu}
2009-10-07 [B] Fixed editpics permission error (thread ID 62045) {eenemeenemuu}
2009-10-06 [A] Added navbar buttons for first/last file (thread ID 61335) {eenemeenemuu}
2009-10-06 [A] Added Finnish language file (user contribution) {GauGau}
2009-10-02 [A] Added formal German language file {GauGau}
2009-10-02 [C] Hide noscript table rows if JavaScript is enabled {eenemeenemuu}
2009-10-01 [O] Moved transliteration library to include sub-folder {GauGau}
2009-10-01 [A] Added transliteration library (thread ID 61723) {eenemeenemuu}
2009-09-29 [B] Fixed several issues with meta album 'lastalb' {eenemeenemuu}
2009-09-21 [A] Added plugin filter theme_pageheader_params for pageheader manipulation purposes {GauGau}
2009-09-14 [A] Rename special chars in file name with underscore during upload process (thread ID 61723) {eenemeenemuu}
2009-09-14 [B] Fixed code to check the filesize and reject if it exceeds the max allowed by cpg config {Abbas}
2009-09-10 [O] Removed default social bookmarks option, turning feature into standalone plugin {GauGau}
2009-09-10 [B] Fixed keyword separator of space being trimmed in config table due to VARCHAR {Paver}
2009-09-09 [B] Fixed config panel theme & lang being overridden by user settings (thread ID 61650 & 61651) {Paver}